--- a/index.html
+++ b/index.html
@@ -69,25 +69,25 @@
         <div class="row">
             <div class="col-sm-3">
                 <h2>Javascript</h2>
-                <a href="JavaScript.html">
+                <a href="https://selinankuna.github.io/portfolio/javascript/JavaScript.html">
                     <img src="JavaScript.png" class="img-responsive" style="width:100%" alt="Image" alt="Image">
                 </a>
             </div>
             <div class="col-sm-3">
                 <h2>MYSQL</h2>
-                <a href="MySQL.html">
+                <a href="https://selinankuna.github.io/portfolio/mysql/MySQL.html">
                     <img src="Mysql.png" class="img-responsive" style="width:100%" alt="Image" alt="Image">
                 </a>
             </div>
             <div class="col-sm-3">
                 <h2>Word Press</h2>
-                <a href="wordPress.HTML">
+                <a href="https://selinankuna.github.io/portfolio/wordpress/wordPress.HTML">
                     <img src="wordPress.jpg" class="img-responsive" style="width:100%" alt="Image">
                 </a>
             </div>
             <div class="col-sm-3">
                 <h2>Flutter</h2>
-                <a href="flutter.HTML">
+                <a href="https://selinankuna.github.io/portfolio/flutter/flutter.HTML">
                     <img src="flutter.jpg" class="img-responsive" style="width:100%" alt="Image">
                 </a>
             </div>
