--- a/javascript/JavaScript.html
+++ b/javascript/JavaScript.html
@@ -48,7 +48,7 @@
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="../index.html">Home</a></li>
-                    <li><a href="../aboutMe.html">About Me</a></li>
+                    <li><a href="../aboutme.html">About Me</a></li>
                     <li><a href="../email.html">Email</a></li>
                 </ul>
 
