--- a/wordpress/wordPress.HTML
+++ b/wordpress/wordPress.HTML
@@ -51,7 +51,7 @@
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="../index.html">Home</a></li>
-                    <li><a href="../aboutMe.html">About Me</a></li>
+                    <li><a href="../aboutme.html">About Me</a></li>
                     <li><a href="../email.html">Contact Me</a></li>
                 </ul>
 
