--- a/javascript/JavaScript.html
+++ b/javascript/JavaScript.html
@@ -77,8 +77,8 @@
             <div class="col-sm-3">
                 <h1>Dream Car</h1>
                 <p>Forming JavaScript sentences is called writing statements. Statements are mostly made up of operands (which are like nouns) and operators (which are like verbs).</p>
-                <a href="CarDream.PNG">
-                    <img src="DreamCar-studio.jpg" class="img-responsive" style="width:100%" alt="Image">
+                <a href="dreamCar.HTML">
+                    <img src=" CarDream.PNG" class="img-responsive" style="width:100%" alt="Image">
                 </a>
             </div>
             <div class="col-sm-3">
