--- a/javascript/ShopStart.html
+++ b/javascript/ShopStart.html
@@ -4,7 +4,7 @@
 
 <head>
     <title>Shopping cart program</title>
-    <link rel="stylesheet" type="text/css" media="screen" href="shopStart.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="ShopStart.css" />
 </head>
 
 
@@ -15,7 +15,7 @@
     <button onclick="displayTotal()">Display Total</button>
     <br/>
     <p id="total"></p>
-    <script src="shopStart.js"></script>
+    <script src="ShopStart.js"></script>
 
 </body>
 
